tests/idris2/reflection006/expected
1/1: Building refleq (refleq.idr)
LOG 0: [x, y]
LOG 0: Left: ((Prelude.Types.plus x) y)
LOG 0: Right: ((Prelude.Types.plus y) x)
refleq.idr:24:16--24:21:While processing right hand side of commutes at refleq.idr:24:1--25:1:
Error during reflection: Not done at:
24	commutes x y = prove
	               ^^^^^

